--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: 3runner-gateway
+    name: woobeee-gateway
   config:
     activate:
       on-profile: prod
@@ -14,6 +14,6 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone:
-        http://admin:1234@eureka:8761/eureka
+        http://${EUREKA_ID}:${EUREKA_PASSWORD}@localhost:8761/eureka
   instance:
     prefer-ip-address: true
